feat: v5 light rewrite
Signed-off-by: Sam Gammon <sam@elide.dev>